--- a/admin/models/forms/product.xml
+++ b/admin/models/forms/product.xml
@@ -40,24 +40,24 @@
 			<option value="INACTIVE">COM_NOKMYBUSINESS_INACTIVE</option>
 		</field>
 
-		<field name="stock" type="integer" label="COM_NOKMYBUSINESS_PRODUCTS_FIELD_STOCK_LABEL"
+		<field name="stock" type="number" label="COM_NOKMYBUSINESS_PRODUCTS_FIELD_STOCK_LABEL"
 			description="COM_NOKMYBUSINESS_PRODUCTS_FIELD_STOCK_DESC"
-			first="0" last="9999999999" step="1"
+			min="0" max="9999999999" step="1"
 			required="true" />
 
-		<field name="price" type="text" label="COM_NOKMYBUSINESS_PRODUCTS_FIELD_PRICE_LABEL"
+		<field name="price" type="number" label="COM_NOKMYBUSINESS_PRODUCTS_FIELD_PRICE_LABEL"
 			description="COM_NOKMYBUSINESS_PRODUCTS_FIELD_PRICE_DESC"
-			size="10" pattern="^\d{1,8}(\.\d{1,2})?$"
+			min="0" max="9999999999" step="any"
 			required="true" />
 
-		<field name="vat" type="text" label="COM_NOKMYBUSINESS_PRODUCTS_FIELD_VAT_LABEL"
+		<field name="vat" type="number" label="COM_NOKMYBUSINESS_PRODUCTS_FIELD_VAT_LABEL"
 			description="COM_NOKMYBUSINESS_PRODUCTS_FIELD_VAT_DESC"
-			size="6" pattern="^\d{1,3}(\.\d{1,2})?$"
+			min="0" max="100" step="any"
 			required="true" />
 
 		<field name="picture" type="media" label="COM_NOKMYBUSINESS_PRODUCTS_FIELD_PICTURE_LABEL"
 			description="COM_NOKMYBUSINESS_PRODUCTS_FIELD_PICTURE_DESC"
-			preview="true" preview_width="200" preview_height="200"
+			preview="tooltip"
 			required="true" />
 
 		<field name="createdby" type="text" label="COM_NOKMYBUSINESS_PRODUCTS_FIELD_CREATEDBY_LABEL"
